swagger: improve swagger docs
