# app/Http/Controllers/PermissionController.php
@@ -6,14 +6,26 @@ use App\Http\Controllers\Controller;
 use App\Models\Permission;
 use Illuminate\Http\Request;
 
-/**
- * @OA\Tag(
- *     name="permission",
- *     description=""
- * )
- */
 class PermissionController extends Controller
 {
+    /**
+     * @OA\Get(
+     *     path="/api/permissions",
+     *     summary="List all permissions",
+     *     tags={"permission"},
+     *     @OA\Parameter(
+     *         name="name",
+     *         in="query",
+     *         description="Filter permissions by user name",
+     *         required=false,
+     *         @OA\Schema(type="string")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful response",
+     *     )
+     * )
+     */
     // index
     public function index(Request $request)
     {
@@ -26,6 +38,27 @@ class PermissionController extends Controller
         return view('pages.permission.index', compact('permissions'));
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/permissions/{id}",
+     *     summary="Get a specific permission",
+     *     tags={"permission"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful response"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Permission not found"
+     *     )
+     * )
+     */
     // show
     public function show($id)
     {
@@ -40,6 +73,34 @@ class PermissionController extends Controller
         return view('pages.permission.edit', compact('permission'));
     }
 
+    /**
+     * @OA\Put(
+     *     path="/api/permissions/{id}",
+     *     summary="Update a specific permission",
+     *     tags={"permission"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="status", type="string", description="Status of the permission", example="approved")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Permission updated successfully"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Permission not found"
+     *     )
+     * )
+     */
     // update
     public function update(Request $request, $id)
     {
@@ -50,6 +111,27 @@ class PermissionController extends Controller
         return redirect()->route('permissions.index')->with('success', 'Permission status updated');
     }
 
+    /**
+     * @OA\Delete(
+     *     path="/api/permissions/{id}",
+     *     summary="Delete a specific permission",
+     *     tags={"permission"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=204,
+     *         description="Permission deleted successfully"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Permission not found"
+     *     )
+     * )
+     */
     // destroy
     public function destroy($id)
     {
